@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2005-2024 Axelor (<http://axelor.com>).
+ * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -64,7 +64,7 @@ public class StockHistoryController {
       List<StockHistoryLine> stockHistoryLineList = getStockHistoryLineList(request);
       String productName =
           Beans.get(ProductRepository.class)
-              .find(new Long((Integer) ((Map) request.getContext().get("product")).get("id")))
+              .find(Long.valueOf((Integer) ((Map) request.getContext().get("product")).get("id")))
               .getCode();
       String fileName =
           Beans.get(StockHistoryService.class).getStockHistoryLineExportName(productName);
